--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -64,7 +64,7 @@ import Layout from "../layouts/Base.astro";
     </div>
     <dialog
         id="cat-modal"
-        class="fixed inset-0 z-50 m-auto max-h-[90vh] max-w-2xl overflow-auto rounded-lg border-none bg-light p-4 shadow-xl backdrop:bg-black/50 backdrop:backdrop-blur-xs open:flex open:flex-col"
+        class="fixed inset-0 z-50 m-auto max-h-[90vh] max-w-2xl overflow-auto rounded-lg border-none bg-light p-4 shadow-xl backdrop:backdrop-blur-xs open:flex open:flex-col"
     >
         <div
             class="grid grid-cols-1 items-end gap-4 font-serif text-dark md:grid-cols-2"
