--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -148,9 +148,14 @@ const feeds = currentNode.isFolder
     publishedTime={dayjs(currentNode.data?.published)}
     feeds={feeds}
 >
-    <div class="m-auto flex max-w-2xl flex-col gap-6">
+    <div
+        class="m-auto flex max-w-2xl flex-col gap-6"
+        data-pagefind-body
+        data-pagefind-meta={`tags:${seoTags.join(", ")}`}
+        data-pagefind-filter={`kind:${currentNode.data?.kind!}`}
+    >
         <div class="flex flex-col gap-2">
-            <div class="flex flex-row items-center gap-1">
+            <div class="flex flex-row items-center gap-1" data-pagefind-ignore>
                 <KindIcon
                     kind={currentNode.data?.kind}
                     isFolder={currentNode.isFolder}
@@ -162,7 +167,10 @@ const feeds = currentNode.isFolder
                 />
             </div>
             <div class="flex items-center justify-between">
-                <h1 class="font-serif text-3xl font-semibold text-dark">
+                <h1
+                    class="font-serif text-3xl font-semibold text-dark"
+                    data-pagefind-meta="title"
+                >
                     <Fragment set:html={parseInlineCode(pageTitle)} />
                 </h1>
                 {
@@ -176,14 +184,16 @@ const feeds = currentNode.isFolder
             </div>
             {
                 !currentNode.isFolder && (
-                    <PostDates
-                        createdTime={dayjs(currentNode.data?.published)}
-                        lastModified={dayjs(currentNode.data?.published)}
-                        iconSize="md"
-                        textSize="sm"
-                        layout="horizontal"
-                        className="text-dark-gray"
-                    />
+                    <div data-pagefind-ignore>
+                        <PostDates
+                            createdTime={dayjs(currentNode.data?.published)}
+                            lastModified={dayjs(currentNode.data?.published)}
+                            iconSize="md"
+                            textSize="sm"
+                            layout="horizontal"
+                            className="text-dark-gray"
+                        />
+                    </div>
                 )
             }
         </div>
@@ -205,7 +215,7 @@ const feeds = currentNode.isFolder
         }
         {
             backlinkData.length > 0 && (
-                <>
+                <div data-pagefind-ignore>
                     <hr class="border-dark-gray" />
                     <h2 class="mb-2 font-serif text-xl font-semibold">
                         Backlinks
@@ -219,10 +229,10 @@ const feeds = currentNode.isFolder
                             </li>
                         ))}
                     </ul>
-                </>
+                </div>
             )
         }
-        <Fragment>
+        <Fragment data-pagefind-ignore>
             <hr class="my-6 border-dark-gray" />
             <Giscus />
         </Fragment>
