--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -36,6 +36,13 @@ import Layout from "../layouts/Base.astro";
                     spent my undergrad studying math, economics, and physics.
                 </li>
                 <li>
+                    I'm currently a Software Engineer at <a
+                        href="https://www.airspace-intelligence.com/"
+                        >Air Space Intelligence</a
+                    >, where I focus my efforts on building execution pipelines
+                    for compute-bound tasks.
+                </li>
+                <li>
                     I watch a lot of professional Basketball, and am a diehard
                     Boston Celtics fan. I'm a part-time Connecticut Sun fan,
                     too.
