noindex folder pages
Signed-off-by: Abhi Agarwal <abhiaagarwal01@gmail.com>

--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -147,6 +147,7 @@ const feeds = currentNode.isFolder
     tags={seoTags}
     publishedTime={dayjs(currentNode.data?.published)}
     feeds={feeds}
+    noindex={currentNode.isFolder}
 >
     <div
         class="m-auto flex max-w-2xl flex-col gap-6"
