--- a/src/components/Listing.astro
+++ b/src/components/Listing.astro
@@ -28,7 +28,7 @@ const kinds = Array.from(
 <div id="post-listing-container">
     {
         kinds.length > 1 && (
-            <div class="mb-6 flex flex-col gap-2">
+            <div class="mb-4 flex flex-col gap-2 md:mb-6">
                 <fieldset
                     role="group"
                     class="flex flex-wrap items-center gap-2"
@@ -79,7 +79,7 @@ const kinds = Array.from(
         )
     }
 
-    <ol class="flex flex-col gap-12" aria-label="Post listing">
+    <ol class="flex flex-col gap-8 md:gap-12" aria-label="Post listing">
         {
             posts.map((node) => {
                 const itemKind = node.data?.kind;
