--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -38,9 +38,8 @@ import Layout from "../layouts/Base.astro";
                 <li>
                     I'm currently a Software Engineer at <a
                         href="https://www.airspace-intelligence.com/"
-                        >Air Space Intelligence</a
-                    >, where I focus my efforts on building execution pipelines
-                    for compute-bound tasks.
+                        class="font-semibold">Air Space Intelligence</a
+                    >, where I live my dream of getting paid to write Rust.
                 </li>
                 <li>
                     I watch a lot of professional Basketball, and am a diehard
