--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -150,7 +150,7 @@ const feeds = currentNode.isFolder
     noindex={currentNode.isFolder}
 >
     <div
-        class="m-auto flex max-w-2xl flex-col gap-6"
+        class="m-auto mt-6 flex max-w-2xl flex-col gap-6 lg:mt-0"
         data-pagefind-body
         data-pagefind-meta={`tags:${seoTags.join(", ")}`}
         data-pagefind-filter={`kind:${currentNode.data?.kind!}`}
