--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -183,7 +183,7 @@ window.THEME_KEY="theme-preference";window.THEMES=["light","dark","system"];wind
         class="flex min-h-screen flex-col gap-4 bg-light px-4 py-2 transition-colors md:px-8 md:py-4"
     >
         <Nav />
-        <main class="flex-grow"><slot /></main>
+        <main class="grow"><slot /></main>
         <Footer />
     </body>
 </html>
