--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -12,8 +12,8 @@ import Breadcrumbs from "../../components/Breadcrumbs.astro";
 import FeedIcons from "../../components/FeedIcons.astro";
 import Giscus from "../../components/Giscus.astro";
 import KindIcon from "../../components/KindIcon.astro";
-import Listing from "../../components/Listing.astro";
 import PostDates from "../../components/PostDates.astro";
+import PostListing from "../../components/PostListing.astro";
 import Prose from "../../components/Prose.astro";
 import Base from "../../layouts/Base.astro";
 import { feedConfigToLinks, generateFeedUrls } from "../../util/feeds";
@@ -210,7 +210,7 @@ const feeds = currentNode.isFolder
             currentNode.isFolder && childrenForListing.length > 0 && (
                 <>
                     <hr class="border-dark-gray" />
-                    <Listing posts={childrenForListing} />
+                    <PostListing nodes={childrenForListing} />
                 </>
             )
         }
