--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -27,7 +27,7 @@
                     @apply flex flex-row items-start gap-2 p-0 font-bold text-blue-500;
                 }
 
-                &:not:only-child {
+                &::not:only-child {
                     @apply mb-2;
                 }
 
