--- a/src/components/Graph.astro
+++ b/src/components/Graph.astro
@@ -40,7 +40,7 @@ const compressedGraphData = compress(keyCompressedData);
 
 <div
     id="graph-container"
-    class="m-auto h-[calc(100vh-9rem)] max-w-3xl cursor-default overflow-hidden rounded-lg border-1 border-light-gray"
+    class="m-auto h-[calc(100vh-9rem)] max-w-3xl cursor-default overflow-hidden rounded-lg border border-light-gray"
     data-graph-data={JSON.stringify(compressedGraphData)}
 >
     <svg id="force-graph-svg" class="block h-full w-full"></svg>
