--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -35,7 +35,7 @@ const links: { href: string; text: string }[] = [
                 <a
                     id="bookmarks-button"
                     aria-label="Bookmarks"
-                    href="/bookmarks/1/"
+                    href="/bookmarks/"
                     class:list={[
                         "relative flex h-8 w-7 cursor-pointer items-center justify-center rounded-md transition-colors hover:text-primary",
                         pathname.startsWith("/bookmarks/") && "text-primary",
