Import icons directly from Lucide
Signed-off-by: Abhi Agarwal <abhiaagarwal01@gmail.com>

--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,7 +1,7 @@
 ---
+import Eclipse from "@lucide/astro/icons/eclipse";
 import Moon from "@lucide/astro/icons/moon";
 import Sun from "@lucide/astro/icons/sun";
-import SunMoon from "@lucide/astro/icons/sun-moon";
 import type { AstroComponentFactory } from "astro/runtime/server/render/astro/index.js";
 
 interface Props {
@@ -13,7 +13,7 @@ const { className } = Astro.props;
 const themeConfig: Record<string, { Icon: AstroComponentFactory }> = {
     light: { Icon: Sun },
     dark: { Icon: Moon },
-    system: { Icon: SunMoon },
+    system: { Icon: Eclipse },
 };
 const themes = Object.keys(themeConfig);
 ---
