--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -1,5 +1,5 @@
 ---
-import { Bookmark } from "@lucide/astro";
+import Bookmark from "@lucide/astro/icons/bookmark";
 // import Search from "../components/Search.astro";
 import ThemeToggle from "../components/ThemeToggle.astro";
 
