--- a/src/pages/bookmarks/[page].astro
+++ b/src/pages/bookmarks/[page].astro
@@ -1,5 +1,7 @@
 ---
-import { ArrowLeft, ArrowRight, NotebookText } from "@lucide/astro";
+import ArrowLeft from "@lucide/astro/icons/arrow-left";
+import ArrowRight from "@lucide/astro/icons/arrow-right";
+import NotebookText from "@lucide/astro/icons/notebook-text";
 import type { GetStaticPaths, InferGetStaticPropsType } from "astro";
 import { getCollection } from "astro:content";
 import dayjs from "dayjs";
