--- a/src/pages/bookmarks/index.astro
+++ b/src/pages/bookmarks/index.astro
@@ -1,5 +1,5 @@
 ---
-import { NotebookText } from "@lucide/astro";
+import NotebookText from "@lucide/astro/icons/notebook-text";
 import { getCollection } from "astro:content";
 import dayjs from "dayjs";
 import PostItem from "../../components/PostItem.astro";
@@ -72,7 +72,7 @@ const totalPages = getTotalPages(sortedBookmarks.length);
                     >
                         <span class="sr-only">Loading more bookmarks…</span>
                         <div class="relative flex h-6 w-6 items-center justify-center">
-                            <div class="h-4 w-4 rounded-full bg-dark-gray/30 animate-ping" />
+                            <div class="h-4 w-4 animate-ping rounded-full bg-dark-gray/30" />
                             <div class="absolute h-3 w-3 rounded-full bg-dark-gray/70" />
                         </div>
                     </li>
